--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "devDependencies": {
     "concurrently": "^5.3.0",
+    "eslint-plugin-react-hooks": "^4.6.2",
     "nodemon": "^2.0.4"
   }
 }
