--- a/package.json
+++ b/package.json
@@ -1,23 +1,26 @@
 {
   "name": "mern-book-review-app",
   "version": "1.0.0",
-  "main": "server/server.js",
+  "main": "server/server.mjs",
   "scripts": {
-    "start": "node server/server.js",
-    "server": "nodemon server/server.js",
+    "start": "node server/server.mjs",
+    "server": "nodemon server/server.mjs",
     "client": "cd client && npm start",
     "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "jsonschema": "^1.4.1",
+    "mongodb": "^6.8.0",
     "mongoose": "^5.9.7",
     "react-router-dom": "^6.25.1"
   },
   "devDependencies": {
     "concurrently": "^5.3.0",
     "eslint-plugin-react-hooks": "^4.6.2",
-    "nodemon": "^2.0.4"
+    "nodemon": "^3.1.4"
   }
 }
